cloudformation/EC2/ec2+userdata.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: EC2 instance with simple userdata section to install Apache

Parameters:
  KeyName:
    Description: Name of existing keypair to allow access to the EC2 instance
    Type: AWS::EC2::KeyPair::KeyName 
  InstType:
    Description: Instance type to use, default to t2.nano 
    Type: String
    Default: t2.nano
    AllowedValues:
      - t2.nano
      - t2.micro
      - t3.nano
      - t3.micro

Resources:
  Ec2Instance:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType:
        Ref:
          InstType 
      ImageId: ami-06ce3edf0cff21f07 # Amazon Linux 2 AMI in Ireland
      UserData:
        !Base64 |
          #!/bin/bash -xe
          yum update -y 
          yum install httpd -y
          echo "hello" > /var/www/html/index.html
          service httpd start  
      SecurityGroups:
        - !Ref MySecurityGroup
      KeyName: !Ref KeyName
      Tags:
        - Key: Name
          Value: "CF Generated simple EC2"
        - Key: Project
          Value: "CF"

  MySecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable Web access
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: '80'
        ToPort: '80'
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: '443'
        ToPort: '443'
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: '22'
        ToPort: '22'
        CidrIp: 0.0.0.0/0

Outputs:
  InstanceDns:
    Value: !GetAtt
      - Ec2Instance
      - PublicDnsName
